# aeronet

table-game/: .gitignore  CMakeLists.txt  Doxyfile.in  Readme.md  main.cpp
table-game/docs_src/: task.md
table-game/lib/: CMakeLists.txt  ball.cpp  ball.h  board_cell.cpp  board_cell.h  cell_object.h  file_ops.cpp  file_ops.h  input.cpp  input.h  move_graph.cpp  move_graph.h  movement.cpp  movement.h  table.cpp  table.h  tg_types.h  tg_utils.h
table-game/samples/: sample_5.txt  sample_6.txt
table-game/tests/: CMakeLists.txt  file_ops.cpp  input.cpp  table.cpp  tests_config.h.in  utils.cpp
